[gd_scene load_steps=7 format=3 uid="uid://dgdxk1rqqvko3"]

[ext_resource type="Script" uid="uid://cyjurxgihynak" path="res://pause.gd" id="1_45vjg"]
[ext_resource type="Theme" uid="uid://c2brsslwt3370" path="res://new_theme.tres" id="2_aq7p1"]

[sub_resource type="InputEventAction" id="InputEventAction_45vjg"]
action = &"pause_game"

[sub_resource type="Shortcut" id="Shortcut_aq7p1"]
events = [SubResource("InputEventAction_45vjg")]

[sub_resource type="InputEventAction" id="InputEventAction_aq7p1"]
action = &"pause_game"

[sub_resource type="Shortcut" id="Shortcut_6eyaj"]
events = [SubResource("InputEventAction_aq7p1")]

[node name="Pause" type="CanvasLayer"]
script = ExtResource("1_45vjg")

[node name="PauseButton" type="Button" parent="."]
offset_right = 64.0
offset_bottom = 42.0
theme = ExtResource("2_aq7p1")
shortcut = SubResource("Shortcut_aq7p1")
text = "Pause"

[node name="PauseMenu" type="ColorRect" parent="."]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_aq7p1")
color = Color(0, 0, 0, 0.26666668)

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -162.0
offset_right = 94.5
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PanelContainer"]
layout_mode = 2

[node name="Instructions" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Move: WASD / Arrows
Jump: Enter / Space
Grab: E / Shift
Pause: Esc / Tab
"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_6eyaj")
text = "Resume Game"

[node name="ResetButton" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Reset Level"

[node name="QuitButton" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to Main Menu"

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
